# PongNet

./: .gitignore  CMakeLists.txt  README.md  setup.txt
apps/: App.cpp  CMakeLists.txt  GameMsgTypes.h  PlayerDesc.h
apps/Client/: Client.h  GameClient.cpp  OnlineGame.h
apps/Server/: GameServer.cpp
include/: CMakeLists.txt
include/GameCommon/: BallDesc.h  BallObject.h  Common.h  Game.h  GameLevel.h  GameObject.h  ParticleGenerator.h  Player.h  PlayerDesc.h  PostProcessor.h  PowerUp.h  ResourceManager.h  ScreenInfo.h  Shader.h  SpriteRenderer.h  TextRenderer.h  Texture.h
include/glad/: glad.h
res/levels/: one.lvl
res/shaders/: particle.frag  particle.vert  postprocessing.frag  postprocessing.vert  shader.vert  sprite.frag  text_2d.frag  text_2d.vert
src/: CMakeLists.txt  Game.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp
src/GameCommon/: BallObject.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  ParticleGenerator.cpp  Player.cpp  PostProcessor.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  TextRenderer.cpp  Texture.cpp
src/glad/: glad.c
